templates/ibm-microclimate_template.yaml
---
# Source: ibm-microclimate/charts/gitlab-ce/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  labels:
    app: release-name-postgresql
    chart: "postgresql-0.8.1"
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: release-name-postgresql
---
# Source: ibm-microclimate/charts/gitlab-ce/charts/redis/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis
  labels:
    app: release-name-redis
    chart: "redis-0.9.0"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: release-name-redis
---
# Source: ibm-microclimate/charts/gitlab-ce/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-gitlab-ce
  labels:
    app: release-name-gitlab-ce
    chart: "gitlab-ce-0.2.1"
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: ssh
    port: 22
    targetPort: ssh
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: release-name-gitlab-ce
---
# Source: ibm-microclimate/charts/jenkins/templates/jenkins-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jenkins-agent
  labels:
    app: release-name-jenkins
    chart: "jenkins-0.12.1"
    component: "release-name-jenkins-master"
spec:
  ports:
    - port: 50000
      targetPort: 50000
      name: slavelistener
  selector:
    component: "release-name-jenkins-master"
  type: ClusterIP
---
# Source: ibm-microclimate/charts/jenkins/templates/jenkins-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jenkins
  labels:
    app: release-name-jenkins
    heritage: "Helm"
    release: "release-name"
    chart: "jenkins-0.12.1"
    component: "release-name-jenkins-master"
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      
  selector:
    component: "release-name-jenkins-master"
  type: ClusterIP
---
# Source: ibm-microclimate/templates/service.yaml
#*******************************************************************************
# Licensed Materials - Property of IBM
# "Restricted Materials of IBM"
#
# Copyright IBM Corp. 2017 All Rights Reserved
#
# US Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#*******************************************************************************

apiVersion: v1
kind: Service
metadata:
  name: release-name-ibm-microclimate
  labels:
    app: release-name-ibm-microclimate
    chart: "ibm-microclimate-0.1.0"
    release: "release-name"
    heritage: "Helm"
spec:
  type: NodePort
  ports:
    - port: 4191
      name: theia-http
    - port: 9090
      name: portal-http
    - port: 9091
      name: file-watcher-http
  selector:
    app: release-name-ibm-microclimate
    release: release-name
---
# Source: ibm-microclimate/templates/service.yaml
# For the devops piece
apiVersion: v1
kind: Service
metadata:
  name: release-name-ibm-microclimate-devops
spec:
  type: ClusterIP
  ports:
    - port: 9191
      targetPort: 9191
      protocol: TCP
      name: devops-devops
  selector:
    app: release-name-ibm-microclimate-devops
    release: release-name
---
# Source: ibm-microclimate/charts/gitlab-ce/charts/postgresql/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-postgresql
  labels:
    app: release-name-postgresql
    chart: "postgresql-0.8.1"
    release: "release-name"
    heritage: "Helm"
spec:
  template:
    metadata:
      labels:
        app: release-name-postgresql
    spec:
      containers:
      - name: release-name-postgresql
        image: "postgres:9.6"
        imagePullPolicy: ""
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data/pgdata
          subPath: postgresql-db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: release-name-postgresql
---
# Source: ibm-microclimate/charts/gitlab-ce/charts/redis/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-redis
  labels:
    app: release-name-redis
    chart: "redis-0.9.0"
    release: "release-name"
    heritage: "Helm"
spec:
  template:
    metadata:
      labels:
        app: release-name-redis
    spec:
      containers:
      - name: release-name-redis
        image: "bitnami/redis:3.2.9-r2"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: redis
          containerPort: 6379
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: redis-data
          mountPath: /bitnami/redis
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: release-name-redis
---
# Source: ibm-microclimate/charts/gitlab-ce/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-gitlab-ce
  labels:
    app: release-name-gitlab-ce
    chart: "gitlab-ce-0.2.1"
    release: "release-name"
    heritage: "Helm"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-gitlab-ce
    spec:
      containers:
      - name: release-name-gitlab-ce
        image: gitlab/gitlab-ce:9.4.1-ce.0
        imagePullPolicy: ""
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /help
            port: http
          # This pod takes a very long time to start up. Be cautious when
          # lowering this value to avoid Pod death during startup.
          initialDelaySeconds: 200
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /help
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: gitlab-etc
          mountPath: /etc/gitlab
        - name: gitlab-data
          mountPath: /gitlab-data
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
      volumes:
      - name: gitlab-etc
        persistentVolumeClaim:
          claimName: release-name-gitlab-ce-etc
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: release-name-gitlab-ce-data
---
# Source: ibm-microclimate/charts/jenkins/templates/jenkins-master-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-jenkins
  labels:
    heritage: "Helm"
    release: "release-name"
    chart: "jenkins-0.12.1"
    component: "release-name-jenkins-master"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: "release-name-jenkins-master"
  template:
    metadata:
      labels:
        app: release-name-jenkins
        heritage: "Helm"
        release: "release-name"
        chart: "jenkins-0.12.1"
        component: "release-name-jenkins-master"
      annotations:
        checksum/config: 7d145c3abd70515593ce673c94c7a9a8139e3a06ebd490b2ea5e04cf453f3ba7
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: "default"
      containers:
        - name: release-name-jenkins
          image: "jenkins/jenkins:lts"
          imagePullPolicy: "Always"
          args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: slavelistener
          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 120
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            -
              mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            -
              mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            -
              mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
            -
              mountPath: /usr/share/jenkins/ref/secrets/
              name: secrets-dir
              readOnly: false
      volumes:
      - name: jenkins-config
        configMap:
          name: release-name-jenkins
      - name: plugin-dir
        emptyDir: {}
      - name: secrets-dir
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: release-name-jenkins
---
# Source: ibm-microclimate/templates/deployment.yaml
#*******************************************************************************
# Licensed Materials - Property of IBM
# "Restricted Materials of IBM"
#
# Copyright IBM Corp. 2017 All Rights Reserved
#
# US Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#*******************************************************************************

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-ibm-microclimate
  labels:
    app: release-name-ibm-microclimate
    chart: "ibm-microclimate-0.1.0"
    release: "release-name"
    heritage: "Helm"

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-ibm-microclimate
        chart: "ibm-microclimate-0.1.0"
        release: "release-name"
        heritage: "Helm"
      annotations:
        productName: "IBM Microclimate v1"
        productID: "IBMMicroclimate_1.0_perpetual_00000"
        productVersion: "1.0"

    spec:
      affinity:        
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: beta.kubernetes.io/arch
                  operator: In
                  values:
                  - amd64

      volumes:
      - name: shared-workspace
        persistentVolumeClaim:
          claimName: release-name-ibm-microclimate
      - name: docker-socket
        hostPath:
          path: /var/run/
      - name: registry-secret
        secret:
          secretName: "microclimate-icp-secret"

      containers:

      - name: microclimate-portal
        image: ibmcom/microclimate-portal:latest
        imagePullPolicy: "Always"
        volumeMounts:
        - name: shared-workspace
          mountPath: /microclimate-workspace
        - name: docker-socket
          mountPath: /var/run/
        ports:
        - containerPort: 9090
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /
            port: 9090
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          httpGet:
            path: /
            port: 9090
        resources:
          requests:
            memory: 128Mi
            cpu: 300m
          limits:
            memory: 2Gi
            cpu: 500m

      - name: microclimate-editor
        image: ibmcom/microclimate-theia:latest
        imagePullPolicy: "Always"
        volumeMounts:
        - name: shared-workspace
          mountPath: /home/microclimate-workspace
        ports:
          - containerPort: 4191
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /
            port: 4191
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          httpGet:
            path: /
            port: 4191
        resources:
          requests:
            memory: 350Mi
            cpu: 30m
          limits:
            memory: 1Gi
            cpu: 500m


      - name: microclimate-file-watcher
        image: ibmcom/microclimate-file-watcher:latest
        imagePullPolicy: "Always"
        volumeMounts:
        - name: shared-workspace
          mountPath: /microclimate-workspace
        - name: docker-socket
          mountPath: /var/run/
        - name: registry-secret
          mountPath: /tmp/secret
        ports:
          - containerPort: 9091
        command: ["/scripts/root-watcher.sh", "/microclimate-workspace"]
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /health
            port: 9091
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          httpGet:
            path: /health
            port: 9091
        resources:
          requests:
            memory: 128Mi
            cpu: 500m
          limits:
            memory: 2Gi
            cpu: 3000m
---
# Source: ibm-microclimate/templates/deployment.yaml
# Dedicated deployment for devops piece
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-ibm-microclimate-devops
  labels:
    app: release-name-ibm-microclimate-devops
    chart: ibm-microclimate-0.1.0
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: release-name-ibm-microclimate-devops
      release: release-name
  replicas: 
  template:
    metadata:
      labels:
        app: release-name-ibm-microclimate-devops
        release: release-name
    spec:
      containers:
      - name: devops-chart
        image: "ibmcom/microclimate-devops:latest"
        imagePullPolicy: Always
        ports:
          - containerPort: 9191
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 9191
          initialDelaySeconds: 600
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 9191
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
---
# Source: ibm-microclimate/charts/gitlab-ce/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-gitlab-ce
  labels:
    app: release-name-gitlab-ce
    chart: "gitlab-ce-0.2.1"
    release: "release-name"
    heritage: "Helm"
spec:
  rules:
  - host: "gitlab.192.168.99.100.nip.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: release-name-gitlab-ce
          servicePort: 80
---
# Source: ibm-microclimate/charts/jenkins/templates/jenkins-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-jenkins
spec:
  rules:
  - host: "jenkins.192.168.99.100.nip.io"
    http:
      paths:
      - backend:
          serviceName: release-name-jenkins
          servicePort: 8080
---
# Source: ibm-microclimate/charts/jenkins/templates/jenkins-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-ui-test-c9kxr"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: release-name-ui-test
      image: jenkins/jenkins:lts
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: release-name-jenkins-tests
  - name: tools
    emptyDir: {}
  restartPolicy: Never
---
# Source: ibm-microclimate/templates/tests/portal-endpoint-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-portal-endpoint-test"
  labels:
    app: release-name-ibm-microclimate
    chart: "ibm-microclimate-0.1.0"
    release: "release-name"
    heritage: "Helm"
  annotations:
    "helm.sh/hook": test-success
spec:
  restartPolicy: Never
  containers:
    - name: "release-name-portal-endpoint-test"
      image: ibmcom/microclimate-portal:latest
      command: ["curl"]
      args:  ['release-name-ibm-microclimate:9090']
---
# Source: ibm-microclimate/templates/tests/theia-endpoint-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-theia-endpoint-test"
  labels:
    app: release-name-ibm-microclimate
    chart: "ibm-microclimate-0.1.0"
    release: "release-name"
    heritage: "Helm"
  annotations:
    "helm.sh/hook": test-success
spec:
  restartPolicy: Never
  containers:
    - name: "release-name-theia-endpoint-test"
      image: ibmcom/microclimate-portal:latest
      command: ["curl"]
      args:  ['release-name-ibm-microclimate:4191']
